update index.html, css files, and images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>About | Radley</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Kodchasan" rel="stylesheet">
 </head>
 
 <body>
@@ -25,21 +27,18 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/DucksVSAvs.JPG" class="auth-image" alt="About Radley Eakle">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
-
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
+      <p>I am a father, a husband, a former IRS Agent, and now, a student in this full-stack web development bootcamp.</p>
+      <p>I left the IRS to be a stay at home dad to my beautiful daugther, <a href="assets/images/Mack.JPG" target="blank">Mackenzie</a>, but am now pursuing coding as a more true-to-heart passion.</p>
+      <p>The work and learning has not been easy, but nothing worthwhile ever is.  I look forward to continuing to grow, and learn, and to bring my baby girl up with the same attitude I have towards life!</p>
     </section>
 
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      &copy; Radley Eakle 2018 
     </div>
   </footer>
 </body>
