updated portfolio.html and style.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Portfolio | Radley Eakle</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Kodchasan" rel="stylesheet">
 </head>
 
 <body>
@@ -25,31 +28,47 @@
     <section class="main-section">
       <h1>Portfolio</h1>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+      <div class="card work" style="width: 18rem;">
+        <img class="card-img-top" src="https://via.placeholder.com/140x100" alt="Word-Guess">
+        <div class="card-body">
+          <h5 class="card-title">Word Guess Game</h5>
+          <p class="card-text">Hangman-style word guess game.</p>
+          <a href="https://radsauce.github.io/Word_Guess_Game/" class="btn btn-primary">Play the game!</a>
+        </div>
+      </div>
+      <div class="card work" style="width: 18rem;">
+        <img class="card-img-top" src="https://via.placeholder.com/140x100" alt="Train-Time">
+        <div class="card-body">
+          <h5 class="card-title">Train Time</h5>
+          <p class="card-text">Train table utilizing Moment.js.</p>
+          <a href="https://radsauce.github.io/TrainTime/" class="btn btn-primary">Visit the schedule!</a>
+        </div>
+      </div>
+      <div class="card work" style="width: 18rem;">
+        <img class="card-img-top" src="https://via.placeholder.com/140x100" alt="Giftastic">
+        <div class="card-body">
+          <h5 class="card-title">Giftastic!</h5>
+          <p class="card-text">Gif API search.</p>
+          <a href="https://radsauce.github.io/Giftastic/" class="btn btn-primary">Find a gif!</a>
+        </div>
+      </div>
+      <div class="card work" style="width: 18rem;">
+        <img class="card-img-top" src="https://via.placeholder.com/140x100" alt="Trivia-Game">
+        <div class="card-body">
+          <h5 class="card-title">X-Men Trivia Game</h5>
+          <p class="card-text">Trivia game primarily centered around X-Men.</p>
+          <a href="https://radsauce.github.io/TriviaGame/" class="btn btn-primary">Test your knowledge!</a>
+        </div>
+      </div>
+      <div class="card work" style="width: 18rem;">
+        <img class="card-img-top" src="https://via.placeholder.com/140x100" alt="Crystal-Game">
+        <div class="card-body">
+          <h5 class="card-title">Crystal Game</h5>
+          <p class="card-text">A Math.rand() demonstration.</p>
+          <a href="https://radsauce.github.io/Crystal_Game/" class="btn btn-primary">Play the randomizer!</a>
+        </div>
+      </div>
         
-        <h3>Word Guess</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
 
     </section>
 
@@ -57,9 +76,12 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      &copy; Radley Eakle 2018
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
